src/components/BlogPost/BlogPost.module.css
.blogPost {
  background-color: var(--dark-primary);
  padding: 1.5rem;
  margin-bottom: 2rem;
  border: 3px solid var(--light-primary);
}

.postTitle {
  font-size: 1.8rem;
  color: var(--light-primary);
  margin-bottom: 0.5rem;
}

.postMeta {
  font-size: 0.9rem;
  color: var(--light-primary);
  margin-bottom: 1rem;
}

.postContent {
  color: var(--light-primary);
  line-height: 1.6;
}

.contentWrapper {
  overflow: hidden;
  margin-bottom: 1rem;
}

.inlineImage {
  float: right;
  max-width: 40%;
  height: auto;
  margin-left: 1rem;
}

.postContent p {
  margin-bottom: 1rem;
  text-align: justify;
}

.postActions {
  display: flex;
  gap: 1rem;
  margin-top: 1rem;
}

.editButton,
.deleteButton {
  padding: 0.5rem 1rem;
  border: none;
  cursor: pointer;
  font-size: 0.9rem;
  transition: background-color 0.3s ease;
}

.editButton {
  background-color: var(--edit-button-color);
  color: var(--light-primary);
}

.editButton:hover {
  background-color: var(--edit-button-hover);
}

.deleteButton {
  background-color: var(--delete-button-color);
  color: var(--light-primary);
}

.deleteButton:hover {
  background-color: var(--delete-button-hover);
}

.slideIn {
  animation: slideInAnimation 0.5s ease-out;
}

@keyframes slideInAnimation {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@media (max-width: 600px) {
  .inlineImage {
    float: none;
    max-width: 100%;
    margin-right: 0;
    margin-bottom: 1rem;
  }
}

